# chicken-scheme

./: ANNOUNCE  Buildfile  CMakeLists.txt  ChangeLog.20040412  ChangeLog.20070807  DEFAULTS  INSTALL-CMake.txt  Makefile  Makefile.am  Makefile.bsd  Makefile.cross-linux-mingw  Makefile.cygwin  Makefile.linux  Makefile.macosx  Makefile.mingw  Makefile.mingw-msys  Makefile.msvc  Makefile.solaris  NEWS  README  README.cmake-and-mingw32  README.darcs  StackGrowsDownward.c  TASKS  TODO  apply-hack.ppc.darwin.s  apply-hack.ppc.sysv.s  apply-hack.sparc64.s  apply-hack.x86-64.s  apply-hack.x86.s  autogen.sh  banner.scm  batch-driver.scm  bootstrap.sh  build.scm  buildversion  c-backend.scm  c-platform.scm  cconv-sample.c  chicken-base.scm  (+136 more)
benchmarks/: 0.scm  binarytrees.scm  boyer.scm  browse.scm  cpstak.scm  cscbench.scm  ctak.scm  dderiv.scm  deriv.scm  destructive.scm  div-rec.scm  earley.scm  fft.scm  fib.scm  fibc.scm  fprint.scm  fread.scm  lattice.scm  nbody.scm  nqueens.scm  scheme.scm  traverse.scm  triangl.scm
benchmarks/others/: Makefile  except2.scm  exception.cpp  setlongjmp.c
benchmarks/shootout/: ackermann.chicken  bench  echo.chicken  except.chicken  fibo.chicken  hash.chicken  lists1.chicken  matrix.chicken  methcall.chicken  moments.chicken  nbody.chicken  nestedloop.chicken  nsieve-bits.scm  objinst.chicken  procinst.chicken  prodcons.chicken  regexmatch.chicken  reversefile.chicken  ringmsg.chicken  sieve.chicken  spellcheck.chicken  strcat.chicken  sumcol.chicken  wordfreq.chicken
boot/: CMakeLists.txt
debian/: README.Debian  changelog  chicken-bin.dirs  chicken-bin.doc-base  chicken-bin.docs  chicken-bin.files  chicken-bin.install  chicken-bin.manpages  control  copyright  libchicken-dev.files  libchicken-dev.install  libchicken0.dirs  libchicken0.files  libchicken0.install  libchicken3.install  rules
distribution/: build-osx.sh  manifest  release.scm
manual/: Accessing external objects  Acknowledgements  Basic mode of operation  Bibliography  Bugs and limitations  C interface  Callbacks  Data representation  Declarations  Deviations from the standard  Embedding  Extensions  Extensions to the standard  Foreign type specifiers  Getting started  Interface to external functions and variables  Locations  Modules and macros  Non standard macros and special forms  Non standard read syntax  Non-standard macros and special forms  Non-standard read syntax  Other support procedures  Overview  Parameters  Pattern matching  Supported language  The User's Manual  Unit data-structures  Unit eval  Unit expand  Unit extras  Unit files  Unit library  Unit lolevel  Unit match  Unit ports  Unit posix  Unit regex  Unit srfi-1  (+11 more)
misc/: Chicken Runtime Data Type Proposal  SWIG-configure.in.diff  build.scm  dbgconfigure  inl.scm  inline.scm  linux-runner.c  makedist.scm  makedoc  makedoc.scm  makehtml.scm  makehtmldoc  maketexi.scm  manual.css  merge-branch  merge-chicken-branch  merge-from-trunk  mini-setup.scm  nextbuild.scm  nextbuild.setup  osx-deploy-bundle.scm  setup-api.scm  setversion.scm  sync-from-wiki  wwchicken.scm
misc/mini-runtime/: Makefile  lib.scm
patches/: finalizer-closures.diff  finalizer-exceptions.diff  msvc-attempt.diff  record-rename.diff  repobranches-3.0.0.diff  win32-program-path.diff
pcre/: AUTHORS  CMakeLists.txt  config.h  pcre.h  pcre_internal.h
scripts/: README  chicken-2.6-build-transcript  dpkg-eggs.scm  enscript-texinfo.scm  guess-platform.sh  henrietta.cgi  henrietta.scm  import-to-index  make-egg-index.scm  make-egg-rss-feed.scm  make-eggdoc.scm  makedist.scm  makehtml.scm  maketexi.scm  merge-branch  merge-branch.scm  mubench.scm  scheme  setversion  sync-from-wiki  test-dist.sh  tools.scm  wiki2html.scm  xhere
site/: chicken.html  index.html
static/: CMakeLists.txt
tags/2.317/: CMakeLists.txt  Makefile.am  README.darcs  build.scm  chicken.h  chicken.scm  configure.in  csc.scm.in  csibatch.bat  easyffi.scm  extras.scm  lolevel.scm  posix.scm  runtime.c
tags/2.317/benchmarks/: conform.scm  dderiv.scm  maze.scm  plists  scheme.scm  tak.scm
tags/2.317/benchmarks/others/: except.scm  results.txt
tags/2.317/benchmarks/shootout/: ary.chicken  heapsort.chicken  lists.chicken
tags/2.317/distribution/: build-osx.sh
tags/2.317/misc/: nextbuild.setup  wwchicken.scm
tags/2.317/tests/: runtests.sh
tests/: apply-test.scm  bootstrap.sh  compiler-syntax-tests.scm  compiler-tests-2.scm  compiler-tests.scm  dirty-macros.scm  ec-tests.scm  ec.scm  embedded1.c  embedded2.scm  feeley-dynwind.scm  fix-gensyms.scm  fixnum-tests.scm  hash-table-tests.scm  import-library-test1.scm  import-library-test2.scm  library-tests.scm  locative-stress-test.scm  lolevel-tests.scm  loopy-loop.scm  loopy-test.scm  match-test.scm  matchable.scm  meta-syntax-test.scm  module-tests-2.scm  module-tests-compiled.scm  module-tests.scm  path-tests.scm  port-tests.scm  r4rstest.out  r5rs_pitfalls.scm  re-tests.txt  runtests.sh  scrutiny-tests.scm  scrutiny.expected  srfi-18-tests.scm  syntax-rule-stress-test.scm  syntax-tests-2.scm  syntax-tests.scm  test-chained-modules.scm  (+5 more)
trunk/: LICENSE  Makefile.am  README  batch-driver.scm  c-backend.scm  chicken-ffi-macros.scm  chicken-more-macros.scm  chicken-setup.1  chicken.h  chicken.texi  csi.scm  optimizer.scm  runtime.c  srfi-14.scm  srfi-18.scm  stub.scm  support.scm  tinyclos.scm  win-install.bat
trunk/boot/: CMakeLists.txt
wiki/: Accessing external objects  Acknowledgements  Basic mode of operation  Bibliography  Data representation  Declarations  Deviations from the standard  Embedding  Extensions to the standard  Foreign type specifiers  Interface to external functions and variables  Non standard macros and special forms  Non standard read syntax  Parameters  Pattern matching  Supported language  The User's Manual  Unit eval  Unit extras  Unit library  Unit lolevel  Unit match  Unit posix  Unit regex  Unit srfi-1  Unit srfi-18  Unit srfi-4  Unit tcp  Unit tinyclos  Unit utils  Using the compiler  Using the interpreter  chicken-setup  faq
wiki-extensions/: enscript.scm  nowiki.scm  scheme.scm  tags.scm
(+39 files in other folders)
